Fixed: BookmarkNode: Clipped title with some fonts

--- a/src/styles/themes/proton/sidebar/bookmark-node.styl
+++ b/src/styles/themes/proton/sidebar/bookmark-node.styl
@@ -186,6 +186,7 @@
   white-space: nowrap
   overflow: hidden
   margin-right: 3px
+  padding: 3px 0
   color: var(--frame-fg)
   mask: linear-gradient(-90deg, transparent, #000000 12px, #000000)
 
